src/test/ui/suggestions/pub-ident-missing-kw-unclosed-block.stderr
error: this file contains an un-closed delimiter
  --> $DIR/pub-ident-missing-kw-unclosed-block.rs:29:13
   |
39 | fn main(){}
   |             ^
   |
help: did you mean to close this delimiter?
  --> $DIR/pub-ident-missing-kw-unclosed-block.rs:5:7
   |
15 | pub Y {
   |       ^

error: missing `struct` for struct definition
  --> $DIR/pub-ident-missing-kw-unclosed-block.rs:1:4
   |
11 | pub Struct {
   |    ^
   |
help: add `struct` here to parse `Struct` as a public struct
   |
11 | pub struct Struct {
   |     ^^^^^^

error: missing `struct` for struct definition
  --> $DIR/pub-ident-missing-kw-unclosed-block.rs:5:4
   |
15 | pub Y {
   |    ^
   |
help: add `struct` here to parse `Y` as a public struct
   |
15 | pub struct Y {
   |     ^^^^^^

error: aborting due to 3 previous errors

